use_cases_dump.txt
python :   File "<string>", line 8
At line:1 char:1
+ python -c "
+ ~~~~~~~~~~~
    + CategoryInfo          : NotSpecified: (  File "<string>", line 8:String) [], RemoteException
    + FullyQualifiedErrorId : NativeCommandError
 
    print(f'UC{int(row[" sl\])
                       ^
SyntaxError: unterminated string literal (detected at line 8)
